# e621_downloader

./: Cargo.toml  README.md
src/: main.rs  program.rs
src/e621/: blacklist.rs  grabber.rs  mod.rs
src/e621/io/: mod.rs  parser.rs  tag.rs
src/e621/sender/: mod.rs
src/e621/tui/: mod.rs
