[package]
name = "e621_downloader"
version = "1.7.3"
authors = ["McSib <mcsibsart@gmail.com>"]
edition = "2024"

[dependencies]
# These are added to fix security vulnerabilities.
smallvec = "1.15.1"
tokio = "1.49.0"
rustls = "0.21.12"
h2 = "0.3.27"

base64-url = "2.0.2"
indicatif = "0.17.11"
dialoguer = "0.10.4"
console = "0.15.11"
log = "0.4.29"
simplelog = "0.12.2"
reqwest = { version = "0.11.27", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
